--- a/absolutetag.html
+++ b/absolutetag.html
@@ -8,6 +8,7 @@
 	<br/>
 	<hr/>
 
+	<!-- External -->
 	<!-- To open google in the next page in the new tab -->
 	<a href="https://www.google.com" target="_blank">Google Blank</a>
 	<br/>
@@ -26,7 +27,10 @@
 	<br/>
 	<br/>
 	<hr/>
-	
+	<!-- Local , _self Recommended -->
+	<a href ="imagetag.html" target="_self"> Go to Image Tag </a>
+
+	<hr/>
 	<!-- To open the Call now to the dail pad -->
 	<a href="tel:09422042242"> Call Now </a>
 	<br/>
